--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -8,7 +8,7 @@
 	<div class="section">
 	<h2>Submissions, a Play in 4 Acts.</h2>
 	<h3>1. Connect with Orange Pekoe Press</h3>
-	<p>Use your Google or Facebook account to connect with Orange Pekoe Press. Connecting will take you to your dashboard, the center of your interactions with Orange Pekoe Press.</p>
+	<p>Use your Google account to connect with Orange Pekoe Press. If you don't already have one, Google Accounts are free to create with any email. Connecting will take you to your dashboard, the center of your interactions with Orange Pekoe Press.</p>
 	<h3>2. Submit Your Story</h3>
 	<p>Enter basic information about your story&mdash;title, author's name, text, whether or not it is a simultaneous submission, that sort of thing. You can find answers to questions about the submission process in the <a href="{{ url_for('main/faq') }}">FAQ</a>.</p>
 	<h3>3. Preview Story Appearance</h3>
