--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,10 @@
 	</head>
 	<body>
 		<div id="content">
-		{% block content %}
 		<div class="section">
 	    <ul class="menu"><li><a href="{{ url_for('main/index') }}">Home</a></li><li><a href="{{ url_for('submissions/index') }}">Submissions</a></li><li><a href="{{ url_for('main/faq') }}">FAQ</a></li></ul>
 	    </div>
-		{% endblock %}
+		{% block content %}{% endblock %}
 		</div>
 	</body>
 </html>
