--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,12 @@
 	<body>
 		<div id="content">
 		<div class="section">
-	    <ul class="menu"><li><a href="{{ url_for('main/index') }}">Home</a></li><li><a href="{{ url_for('submissions/index') }}">Submissions</a></li><li><a href="{{ url_for('main/faq') }}">FAQ</a></li></ul>
+	    <ul class="menu">
+            <li><a href="{{ url_for('main/index') }}">Home</a></li>
+            <li><a href="{{ url_for('submissions/index') }}">Submissions</a></li>
+            <li><a href="{{ url_for('main/faq') }}">FAQ</a></li>
+            <li><a href="{{ login }}">Connect</a></li>
+        </ul>
 	    </div>
 		{% block content %}{% endblock %}
 		</div>
