--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -7,9 +7,9 @@
 	<div class="section">
 	<h2>Submissions, a Play in 4 Acts.</h2>
 	<h3>1. Connect with Orange Pekoe Press</h3>
-	<p>Use your Google account to connect with Orange Pekoe Press. If you don't already have one, Google Accounts are free to create with any email. Connecting will take you to your dashboard, the center of your interactions with Orange Pekoe Press.</p>
+	<p>Use your Google account to <a href="{{ login }}">connect with Orange Pekoe Press</a>. If you don't already have one, Google Accounts are free to create with any email &mdash; just click the connect link. Connecting will let you submit and take you to your dashboard, the center of your interactions with Orange Pekoe Press.</p>
 	<h3>2. Submit Your Story</h3>
-	<p>Enter basic information about your story&mdash;title, author's name, text, whether or not it is a simultaneous submission, that sort of thing. You can find answers to questions about the submission process in the <a href="{{ url_for('main/faq') }}">FAQ</a>.</p>
+	<p>Enter basic information about your story &mdash; title, author's name, text, whether or not it is a simultaneous submission, that sort of thing. You can find answers to questions about the submission process in the <a href="{{ url_for('main/faq') }}">FAQ</a>.</p>
 	<h3>3. Preview Story Appearance</h3>
 	<p>Immediately after submitting, you'll be shown a webpage demonstrating how Orange Pekoe Press's computers see your submission. Check this over for problems, and flag it for formatting errors if you see them, then submit a new version. You can also see this at any time in your dashboard.</p>
 	<h3>4. Watch for Updates</h3>
