--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -11,7 +11,7 @@
 	<h3>2. Submit Your Story</h3>
 	<p>Enter basic information about your story &mdash; title, author's name, text, whether or not it is a simultaneous submission, that sort of thing. You can find answers to questions about the submission process in the <a href="{{ url_for('main/faq') }}">FAQ</a>.</p>
 	<h3>3. Preview Story Appearance</h3>
-	<p>Immediately after submitting, you'll be shown a webpage demonstrating how Orange Pekoe Press's computers see your submission. Check this over for problems, and flag it for formatting errors if you see them, then submit a new version. You can also see this at any time in your dashboard.</p>
+	<p>Immediately after submitting, you'll be shown a webpage demonstrating how Orange Pekoe Press's computers see your submission. Check this over for problems, and if you see any formatting errors, submit a new version. You can also see this at any time by going to your dashboard.</p>
 	<h3>4. Watch for Updates</h3>
 	<p>We will email you when your story is accepted or rejected, but you can also check your story's status on your dashboard.</p>
 	</div>
