--- a/templates/preview.html
+++ b/templates/preview.html
@@ -4,7 +4,12 @@
 {% block title %}Orange Pekoe Press :: Preview of {{submission.title}}{% endblock %}
 
 {% block content %}
+    <div class="section">
+    <h2>Preview</h2>
+    <p>The preview of your submission is below. Check over it for errors, and if there are any, go ahead and <a href="{{url_for('home/resubmit', submission_id=submission.key().id())}}">submit a new version</a>. Please, do not do change your submission in any way other than to correct formatting errors.</p>
+    </div>
 	<div class="section">
-	
+	<h2>{{submission.title}}</h2>
+    {{submission.text|e|preview}}
     </div>
 {% endblock %}
