--- a/templates/resubmit.html
+++ b/templates/resubmit.html
@@ -2,16 +2,17 @@
 {% from 'macros.html' import with_errors %}
 
 
-{% block title %}Orange Pekoe Press :: Submit{% endblock %}
+{% block title %}Orange Pekoe Press :: Resubmit "{{submission.title|e}}"{% endblock %}
 
 {% block content %}
 	<div class="section">
-        <h2>Submit Your Short Fiction</h2>
+        <h2>Resubmit "{{submission.title|e}}"</h2>
+        <p>Resubmit a fixed version of your work if it has formatting problems.</p>
         <form method="post" action=".">
 	    {% for field in form %}
             {{ with_errors(field) }}
         {% endfor %}
-         <input type="submit" value="Submit" />
+         <input type="submit" value="Resubmit" />
         </form>
         <p>We'll contact you with news regarding this submission at your account's email. That email is currently {{account.email}}.</p>
     </div>
