--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" >
 		<meta http-equiv="Content-Script-Type" content="text/javascript" >
 		<meta http-equiv="Content-Style-Type" content="text/css" >
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif|Josefin+Sans+Std+Light">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Josefin+Sans+Std+Light">
 		<link rel="stylesheet" href="/static/styles.css" type="text/css">
 		<script type="text/javascript">  var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-3745142-3']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); </script>
 	</head>
